--- a/hollymovies_app/templates/detail/movie_detail.html
+++ b/hollymovies_app/templates/detail/movie_detail.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block page_title %}Movie{% endblock page_title %}
+{% block body %}
 <h1>Detail filmu: {{ movie.name }}</h1>
 
 {% if movie.description %}
@@ -20,6 +16,4 @@
     </ul>
 {% endif %}
 
-
-</body>
-</html>
+{% endblock body %}
