--- a/hollymovies_app/templates/base.html
+++ b/hollymovies_app/templates/base.html
@@ -1,11 +1,14 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block page_title %}Page title{% endblock page_title %}</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
+    <h1> <a href="{% url "homepage" %}"> Homepage</a></h1>
     {% block body %}{% endblock body %}
 </body>
 </html>
