--- a/hollymovies_app/templates/homepage.html
+++ b/hollymovies_app/templates/homepage.html
@@ -4,7 +4,7 @@
 
 <h1>Filmy:</h1><br>
 {% for movie in movies %}
-    Jméno: <a href="{% url "movie_detail" movie.pk %}">{{ movie.name }}</a> {{ likes }}<br>
+    Jméno: <a href="{% url "movie_detail" movie.pk %}">{{ movie.name }}</a> {{ movie.likes }}<br>
 {% endfor %}
 
 {% endblock body %}
