--- a/hollymovies_app/static/css/style.css
+++ b/hollymovies_app/static/css/style.css
@@ -1,3 +1,13 @@
 body {
     background-color: lightskyblue;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+h1 {
+    color: darkred;
+    text-decoration: none;
+}
+
+h1:link {
+    color:black;
 }
