--- a/hollymovies_app/templates/base.html
+++ b/hollymovies_app/templates/base.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
-    <h1 class="homepage"> <a href="{% url "homepage" %}"> Homepage</a></h1>
+    <h1 class="homepage"> <a class="homepage" href="{% url "homepage" %}"> Homepage</a></h1>
     {% block body %}{% endblock body %}
 </body>
 </html>
