--- a/hollymovies_app/templates/base.html
+++ b/hollymovies_app/templates/base.html
@@ -9,6 +9,23 @@
 </head>
 <body>
     <h1 class="homepage"> <a class="homepage" href="{% url "homepage" %}"> Homepage</a></h1>
+    <h2 class="homepage"> <a class="homepage" href="{% url "contact" %}"> Contact us</a></h2>
+    <h2><a href="{% url 'create_movie' %}">Create Movie</a></h2>
+    <h2><a href="{% url 'create_actor' %}">Create Actor</a></h2>
+    <h2><a href="{% url 'premium' %}">Premium</a></h2>
+
+{% if request.user.is_authenticated %}
+
+    <h2>Username: {{request.user.username}}</h2>
+    <h2><a href="{% url 'change_password' %}">Change password</a></h2>
+    <h2><a href="{% url 'logout' %}">Logout</a></h2>
+ {% else %}
+
+    <h2><a href="{% url 'register' %}">Register</a></h2>
+    <h2><a href="{% url 'login' %}">Login</a></h2>
+{% endif %}
+
+
     {% block body %}{% endblock body %}
 </body>
 </html>
